<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_vertical_gradient"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/htab_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/iv_backdrop_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_image_backdrop"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                app:layout_collapseMode="pin" />

            <ImageView
                android:id="@+id/iv_not_found"
                android:layout_width="match_parent"
                android:layout_height="@dimen/len_200dp"
                android:contentDescription="@string/content_image_not_found"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/robot"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/len_16dp"
                android:layout_marginLeft="@dimen/len_16dp"
                android:layout_marginTop="@dimen/len_120dp"
                android:layout_marginEnd="@dimen/len_16dp"
                android:layout_marginRight="@dimen/len_16dp"
                android:orientation="horizontal"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_collapseMode="parallax">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/iv_poster_detail"
                        android:layout_width="@dimen/len_150dp"
                        android:layout_height="@dimen/len_225dp"
                        android:contentDescription="@string/content_image_poster" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/len_16dp"
                        android:layout_marginLeft="@dimen/len_16dp"
                        android:layout_marginTop="@dimen/len_120dp"
                        android:layout_marginEnd="@dimen/len_16dp"
                        android:layout_marginRight="@dimen/len_48dp"
                        android:text="@string/content_movie_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:theme="@style/Text.Large"
                        tools:ignore="RtlHardcoded" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/len_4dp"
                        android:orientation="horizontal">

                        <RatingBar
                            android:id="@+id/rb_rating_detail"
                            style="@style/Widget.AppCompat.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/len_16dp"
                            android:layout_marginLeft="@dimen/len_16dp"
                            android:numStars="5"
                            android:progressBackgroundTint="@android:color/darker_gray"
                            android:progressTint="@android:color/holo_orange_light"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/tv_rating_detail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/len_8dp"
                            android:layout_marginLeft="@dimen/len_8dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/holo_orange_light"
                            tools:ignore="RtlHardcoded" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_genre_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="@dimen/len_16dp"
                        android:layout_marginTop="@dimen/len_4dp"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/content_movie_genres"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/font_16sp"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/htab_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Text.Uppercase"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/len_16dp"
                android:layout_marginLeft="@dimen/len_16dp"
                android:layout_marginTop="@dimen/len_16dp"
                android:layout_marginEnd="@dimen/len_16dp"
                android:layout_marginRight="@dimen/len_16dp"
                android:text="@string/label_overview"
                android:textColor="@android:color/white"
                android:theme="@style/Text.Normal.Bold" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/len_16dp"
                android:layout_marginLeft="@dimen/len_16dp"
                android:layout_marginTop="@dimen/len_8dp"
                android:layout_marginEnd="@dimen/len_16dp"
                android:layout_marginRight="@dimen/len_16dp"
                android:text="@string/content_image_not_found"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font_13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/len_8dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/len_16dp"
                android:layout_marginLeft="@dimen/len_16dp"
                android:layout_marginTop="@dimen/len_16dp"
                android:layout_marginEnd="@dimen/len_16dp"
                android:layout_marginRight="@dimen/len_16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/label_cast"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_caster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/len_8dp"
                android:nestedScrollingEnabled="false"
                tools:ignore="RtlHardcoded" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/len_4dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/len_16dp"
                android:layout_marginLeft="@dimen/len_16dp"
                android:layout_marginTop="@dimen/len_16dp"
                android:layout_marginEnd="@dimen/len_16dp"
                android:layout_marginRight="@dimen/len_16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/label_video"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/len_8dp"
                android:nestedScrollingEnabled="false"
                tools:ignore="RtlHardcoded" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/len_4dp"
                android:background="@color/colorAccent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>