<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_material"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout_rounded"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="left|bottom"
                    android:layout_gravity="bottom"
                    android:text="@string/label_movie"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:typeface="normal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|bottom"
                    android:layout_gravity="bottom"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/label_more"
                    android:textSize="12sp" />

            </LinearLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/parentShimmerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/len_8dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">

                    <include layout="@layout/card_placeholder" />

                    <include layout="@layout/card_placeholder" />

                    <include layout="@layout/card_placeholder" />

                    <include layout="@layout/card_placeholder" />

                    <include layout="@layout/card_placeholder" />

                    <include layout="@layout/card_placeholder" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/len_16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="left|bottom"
                    android:layout_gravity="bottom"
                    android:text="@string/label_tv_shows"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:typeface="normal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|bottom"
                    android:layout_gravity="bottom"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/label_more"
                    android:textSize="12sp" />

            </LinearLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/parentShimmerLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/len_8dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">

                    <include layout="@layout/card_placeholder" />

                    <include layout="@layout/card_placeholder" />

                    <include layout="@layout/card_placeholder" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_tvshow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/len_16dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>